--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-debounce-input": "^3.2.0",
     "react-dom": "^16.4.1",
     "react-google-maps": "^9.4.5",
+    "react-instafeed": "^0.4.0",
     "react-scripts": "1.1.4"
   },
   "scripts": {
