--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "load-google-maps-api": "^1.3.2",
     "react": "^16.4.1",
     "react-debounce-input": "^3.2.0",
     "react-dom": "^16.4.1",
